// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example files basic-effects.jd 1`] = `
// hello.jd
const hash_420ca266_0: () ={}> string = () => {
    "hello world";
}

// .ts
const hash_420ca266: () => string = () => {
  return "hello world";
};

// sayHi.jd
const hash_3f29645b_0: () ={}> void = () => {
    log(hash_420ca266_0());
}

// .ts
const hash_3f29645b: () => void = () => {
  return log(hash_420ca266());
};

// respondWith.jd
const hash_81e04620_0: (var_0_0) ={}> (() ={hash_c32ec300_0}> T_0) ={}> T_0 = (
    responseValue_0: var_0_0,
) => (fn_1: () ={hash_c32ec300_0}> T_0) => {
    handle! fn_1 {
        0(() => k_2) => <self>(responseValue_0 ++ ".")(() => k_2(responseValue_0)),
        1((v_2) => k_3) => {
            log(v_2);
            <self>(responseValue_0 ++ "-")(k_3);
        },
        pure(a_2) => a_2,
    };
}

// .ts
const hash_81e04620: (arg_0: T_0) => <T_0>(arg_0: (handlers: any, done: (result: T_0) => void) => void) => T_0 = responseValue_0 => fn_1 => {
  {
    let handle_ret_0;
    handleSimpleShallow2("c32ec300", fn_1, [(handlers, _, k_2) => {
      handle_ret_0 = hash_81e04620(responseValue_0 + ".")((handlers: any, done: (arg_0: T_0) => void) => {
        k_2(responseValue_0, handlers, done);
      });
    }, (handlers, v_2, k_3) => {
      handle_ret_0 = function () {
        log(v_2);
        return hash_81e04620(responseValue_0 + "-")(k_3);
      }();
    }], (handlers, a_2) => {
      handle_ret_0 = a_2;
    });
    return handle_ret_0;
  }
};

// farther.jd
const hash_8a219f6c_0: (string) ={hash_c32ec300_0}> string = (name_0: string) => {
    log("yes please " ++ name_0);
    raise!(hash_c32ec300_0());
}

// .ts
const hash_8a219f6c: (arg_0: string, handlers: any, done: (result: string) => void) => void = (name_0: string, handlers: any, done: (arg_0: string) => void) => {
  ((handlers, _ignored) => {
    raise(handlers, "c32ec300", 0, null, done);
  })(handlers, log("yes please " + name_0));
};

// inner.jd
const hash_81d9998c_0: (string) ={hash_c32ec300_0}> void = (name_0: string) => {
    log(hash_8a219f6c_0("Folks") ++ " from farther");
    log("getting");
    log(name_0);
    log(raise!(hash_c32ec300_0()) ++ " and " ++ raise!(hash_c32ec300_0()));
    log("And then " ++ raise!(hash_c32ec300_0()));
    log("Dones");
}

// .ts
const hash_81d9998c: (arg_0: string, handlers: any, done: (result: void) => void) => void = (name_0: string, handlers: any, done: (arg_0: void) => void) => {
  hash_8a219f6c("Folks", handlers, (handlers, arg_0_6) => {
    ((handlers, arg_0_5) => {
      ((handlers, _ignored) => {
        ((handlers, _ignored) => {
          ((handlers, _ignored) => {
            raise(handlers, "c32ec300", 0, null, (handlers, arg_0_4) => {
              ((handlers, arg_0_3) => {
                raise(handlers, "c32ec300", 0, null, (handlers, arg_1_3) => {
                  ((handlers, arg_0_2) => {
                    ((handlers, _ignored) => {
                      raise(handlers, "c32ec300", 0, null, (handlers, arg_1_1) => {
                        ((handlers, arg_0_0) => {
                          ((handlers, _ignored) => {
                            done(handlers, log("Dones"));
                          })(handlers, log(arg_0_0));
                        })(handlers, "And then " + arg_1_1);
                      });
                    })(handlers, log(arg_0_2));
                  })(handlers, arg_0_3 + arg_1_3);
                });
              })(handlers, arg_0_4 + " and ");
            });
          })(handlers, log(name_0));
        })(handlers, log("getting"));
      })(handlers, log(arg_0_5));
    })(handlers, arg_0_6 + " from farther");
  });
};

// test1.jd
const hash_283c34db_0: () ={}> T_0 = () => {
    hash_81e04620_0("<read>")(() => hash_81d9998c_0("Yes"));
}

// .ts
const hash_283c34db: () => T_0 = () => {
  return hash_81e04620("<read>")((handlers: any, done: (arg_0: void) => void) => {
    hash_81d9998c("Yes", handlers, done);
  });
};

// maybeRaise.jd
const hash_390f1a60_0: (bool) ={hash_c32ec300_0}> string = (shouldRaise_0: bool) => {
    if shouldRaise_0 {
        raise!(hash_c32ec300_0());
    } else {
        "didn't raise";
    };
}

// .ts
const hash_390f1a60: (arg_0: bool, handlers: any, done: (result: string) => void) => void = (shouldRaise_0: bool, handlers: any, done: (arg_0: string) => void) => {
  shouldRaise_0 ? raise(handlers, "c32ec300", 0, null, done) : done(handlers, "didn't raise");
};

// test2.jd
const hash_5b54cdc0_0: () ={}> void = () => {
    hash_81e04620_0("<read>")(() => log(hash_390f1a60_0(true) ++ hash_390f1a60_0(false)));
}

// .ts
const hash_5b54cdc0: () => void = () => {
  return hash_81e04620("<read>")((handlers: any, done: (arg_0: void) => void) => {
    hash_390f1a60(true, handlers, (handlers, arg_0_1) => {
      hash_390f1a60(false, handlers, (handlers, arg_1_1) => {
        ((handlers, arg_0_0) => {
          done(handlers, log(arg_0_0));
        })(handlers, arg_0_1 + arg_1_1);
      });
    });
  });
};

// raiseIf.jd
const hash_fb63f634_0: (string) ={hash_c32ec300_0}> string = (check_0: string) => {
    if raise!(hash_c32ec300_0()) == check_0 {
        raise!(hash_c32ec300_0());
    } else {
        "didn't raise";
    };
}

// .ts
const hash_fb63f634: (arg_0: string, handlers: any, done: (result: string) => void) => void = (check_0: string, handlers: any, done: (arg_0: string) => void) => {
  raise(handlers, "c32ec300", 0, null, (handlers, arg_0_0) => {
    ((handlers, cond) => {
      if (cond) {
        raise(handlers, "c32ec300", 0, null, done);
      } else {
        done(handlers, "didn't raise");
      }
    })(handlers, arg_0_0 == check_0);
  });
};

// test3.jd
const hash_5585488f_0: () ={}> void = () => {
    log(hash_81e04620_0("<read>")(() => hash_fb63f634_0("<read>")));
}

// .ts
const hash_5585488f: () => void = () => {
  return log(hash_81e04620("<read>")((handlers: any, done: (arg_0: string) => void) => {
    hash_fb63f634("<read>", handlers, done);
  }));
};

// letBind.jd
const hash_37acbb7c_0: () ={hash_c32ec300_0}> void = () => {
    const x_0 = raise!(hash_c32ec300_0());
    log(x_0 ++ "Hello");
}

// .ts
const hash_37acbb7c: (handlers: any, done: (result: void) => void) => void = (handlers: any, done: (arg_0: void) => void) => {
  raise(handlers, "c32ec300", 0, null, (handlers, x_0) => {
    done(handlers, log(x_0 + "Hello"));
  });
};

// test4.jd
const hash_6e68564b_0: () ={}> T_0 = () => {
    hash_81e04620_0("<read>")(hash_37acbb7c_0);
}

// .ts
const hash_6e68564b: () => T_0 = () => {
  return hash_81e04620("<read>")(hash_37acbb7c);
};

// .jd
hash_283c34db_0()

// .ts
hash_283c34db();

// .jd
hash_5b54cdc0_0()

// .ts
hash_5b54cdc0();

// .jd
hash_5585488f_0()

// .ts
hash_5585488f();

// .jd
hash_6e68564b_0()

// .ts
hash_6e68564b();
`;

exports[`Example files basics.jd 1`] = `
// .jd
true

// .ts
true;

// .jd
"hi" == "hi"

// .ts
"hi" == "hi";

// freturn.jd
const hash_f33a6492_0: () ={}> string = () => "yes"

// .ts
const hash_f33a6492: () => string = () => "yes";

// .jd
hash_f33a6492_0() == "yes"

// .ts
hash_f33a6492() == "yes";

// arg.jd
const hash_99f8b328_0: (string) ={}> string = (arg_0: string) => arg_0 ++ "1"

// .ts
const hash_99f8b328: (arg_0: string) => string = arg_0 => arg_0 + "1";

// .jd
hash_99f8b328_0("2") == "21"

// .ts
hash_99f8b328("2") == "21";

// identity.jd
const hash_1efc8c33_0: (T_0) ={}> T_0 = (x_0: T_0) => x_0

// .ts
const hash_1efc8c33: <T_0>(arg_0: T_0) => T_0 = x_0 => x_0;

// .jd
hash_1efc8c33_0("5") ++ "4" == "54"

// .ts
hash_1efc8c33("5") + "4" == "54";

// provideString.jd
const hash_f3f7046a_0: (string) ={}> (() ={hash_e97b5320_0}> string) ={}> string = (
    responseValue_0: string,
) => (fn_1: () ={hash_e97b5320_0}> string) => {
    handle! fn_1 {
        0(() => k_2) => <self>(responseValue_0 ++ ".")(() => k_2(responseValue_0)),
        pure(a_2) => a_2,
    };
}

// .ts
const hash_f3f7046a: (arg_0: string) => (arg_0: (handlers: any, done: (result: string) => void) => void) => string = responseValue_0 => fn_1 => {
  {
    let handle_ret_0;
    handleSimpleShallow2("e97b5320", fn_1, [(handlers, _, k_2) => {
      handle_ret_0 = hash_f3f7046a(responseValue_0 + ".")((handlers: any, done: (arg_0: string) => void) => {
        k_2(responseValue_0, handlers, done);
      });
    }], (handlers, a_2) => {
      handle_ret_0 = a_2;
    });
    return handle_ret_0;
  }
};

// .jd
hash_f3f7046a_0("hi")(() => "m") == "m"

// .ts
hash_f3f7046a("hi")((handlers: any, done: (arg_0: string) => void) => {
  done(handlers, "m");
}) == "m";

// impure.jd
const hash_29d91920_0: () ={hash_e97b5320_0}> string = () => "A"

// .ts
const hash_29d91920: (handlers: any, done: (result: string) => void) => void = (handlers: any, done: (arg_0: string) => void) => {
  done(handlers, "A");
};

// .jd
hash_f3f7046a_0("hi")(hash_29d91920_0) == "A"

// .ts
hash_f3f7046a("hi")(hash_29d91920) == "A";

// pure.jd
const hash_283fc6ef_0: () ={}> string = () => "AA"

// .ts
const hash_283fc6ef: () => string = () => "AA";

// .jd
hash_f3f7046a_0("hi")(hash_283fc6ef_0) == "AA"

// .ts
hash_f3f7046a("hi")((handlers: any, done: (arg_0: string) => void) => {
  done(handlers, hash_283fc6ef());
}) == "AA";

// .jd
hash_f3f7046a_0("hi")(() => "m") == "m"

// .ts
hash_f3f7046a("hi")((handlers: any, done: (arg_0: string) => void) => {
  done(handlers, "m");
}) == "m";

// provideStringWithArg.jd
const hash_d13196fc_0: (string) ={}> (string, (string) ={hash_e97b5320_0}> string) ={}> string = (
    responseValue_0: string,
) => (passIn_1: string, fn_2: (string) ={hash_e97b5320_0}> string) => {
    handle! () => fn_2(passIn_1) {
        0(() => k_3) => hash_f3f7046a_0(responseValue_0 ++ ".")(() => k_3(responseValue_0)),
        pure(a_3) => a_3,
    };
}

// .ts
const hash_d13196fc: (arg_0: string) => (arg_0: string, arg_1: (arg_0: string, handlers: any, done: (result: string) => void) => void) => string = responseValue_0 => (passIn_1, fn_2) => {
  {
    let handle_ret_0;
    handleSimpleShallow2("e97b5320", (handlers: any, done: (arg_0: string) => void) => {
      fn_2(passIn_1, handlers, done);
    }, [(handlers, _, k_3) => {
      handle_ret_0 = hash_f3f7046a(responseValue_0 + ".")((handlers: any, done: (arg_0: string) => void) => {
        k_3(responseValue_0, handlers, done);
      });
    }], (handlers, a_3) => {
      handle_ret_0 = a_3;
    });
    return handle_ret_0;
  }
};

// .jd
hash_d13196fc_0("hi")("Passed in", (arg_0: string) => arg_0 ++ "-m") == "Passed in-m"

// .ts
hash_d13196fc("hi")("Passed in", (arg_0_0: string, handlers: any, done: (arg_0: string) => void) => {
  done(handlers, (arg_0 => arg_0 + "-m")(arg_0_0));
}) == "Passed in-m";
`;

exports[`Example files eff-paper.jd 1`] = `
// tee.jd
const hash_23de3332_0: (string) ={}> string = (x_0: string) => {
    log("> " ++ x_0);
    x_0;
}

// .ts
const hash_23de3332: (arg_0: string) => string = x_0 => {
  log("> " + x_0);
  return x_0;
};

// decide.jd
const hash_c85a8d8c_0: () ={hash_4175b47c_0}> bool = () => raise!(hash_4175b47c_0())

// .ts
const hash_c85a8d8c: (handlers: any, done: (result: bool) => void) => void = (handlers: any, done: (arg_0: bool) => void) => {
  raise(handlers, "4175b47c", 0, null, done);
};

// decide.jd
const hash_e7c8905c_0: () ={hash_4175b47c_0}> bool = () => raise!(hash_4175b47c_0())

// .ts
const hash_e7c8905c: (handlers: any, done: (result: bool) => void) => void = (handlers: any, done: (arg_0: bool) => void) => {
  raise(handlers, "4175b47c", 0, null, done);
};

// fail.jd
const hash_81318f70_0: () ={hash_319e9190_0}> int = () => raise!(hash_319e9190_0())

// .ts
const hash_81318f70: (handlers: any, done: (result: number) => void) => void = (handlers: any, done: (arg_0: number) => void) => {
  raise(handlers, "319e9190", 0, null, done);
};

// chooseInt.jd
const hash_3c7352ca_0: (int, int) ={hash_319e9190_0, hash_4175b47c_0}> int = (m_0: int, n_1: int) => {
    if m_0 > n_1 {
        hash_81318f70_0();
        10;
    } else {
        if hash_e7c8905c_0() {
            m_0;
        } else {
            <self>(m_0 + 1, n_1);
        };
    };
}

// .ts
const hash_3c7352ca: (arg_0: number, arg_1: number, handlers: any, done: (result: number) => void) => void = (m_0: number, n_1: number, handlers: any, done: (arg_0: number) => void) => {
  m_0 > n_1 ? hash_81318f70(handlers, (handlers, _ignored) => {
    done(handlers, 10);
  }) : hash_e7c8905c(handlers, (handlers, cond) => {
    if (cond) {
      done(handlers, m_0);
    } else {
      hash_3c7352ca(m_0 + 1, n_1, handlers, done);
    }
  });
};

// pythagorean.jd
const hash_2fe6af82_0: (int, int) ={hash_319e9190_0, hash_4175b47c_0}> string = (m_0: int, n_1: int) => {
    const a_2 = hash_3c7352ca_0(m_0, n_1 - 1);
    const b_3 = hash_3c7352ca_0(a_2 + 1, n_1);
    const a2_4 = a_2 * a_2;
    const b2_5 = b_3 * b_3;
    if isSquare(a2_4 + b2_5) {
        intToString(a_2) ++ ":" ++ intToString(b_3);
    } else {
        log("A: " ++ intToString(a_2) ++ " => " ++ intToString(a2_4));
        log("B: " ++ intToString(b_3) ++ " => " ++ intToString(b2_5));
        hash_81318f70_0();
        "??? how did this return";
    };
}

// .ts
const hash_2fe6af82: (arg_0: number, arg_1: number, handlers: any, done: (result: string) => void) => void = (m_0: number, n_1: number, handlers: any, done: (arg_0: string) => void) => {
  hash_3c7352ca(m_0, n_1 - 1, handlers, (handlers, a_2) => {
    hash_3c7352ca(a_2 + 1, n_1, handlers, (handlers, b_3) => {
      ((handlers, a2_4) => {
        ((handlers, b2_5) => {
          isSquare(a2_4 + b2_5) ? done(handlers, intToString(a_2) + ":" + intToString(b_3)) : ((handlers, _ignored) => {
            ((handlers, _ignored) => {
              hash_81318f70(handlers, (handlers, _ignored) => {
                done(handlers, "??? how did this return");
              });
            })(handlers, log("B: " + intToString(b_3) + " => " + intToString(b2_5)));
          })(handlers, log("A: " + intToString(a_2) + " => " + intToString(a2_4)));
        })(handlers, b_3 * b_3);
      })(handlers, a_2 * a_2);
    });
  });
};

// handleFail.jd
const hash_575fa754_0: (() ={hash_4175b47c_0, hash_319e9190_0}> T_0, () ={hash_4175b47c_0}> T_0) ={
    hash_4175b47c_0,
}> T_0 = (fn_0: () ={hash_4175b47c_0, hash_319e9190_0}> T_0, orElse_1: () ={hash_4175b47c_0}> T_0) => handle! fn_0 {
    0(() => __2) => orElse_1(),
    pure(x_2) => x_2,
}

// .ts
const hash_575fa754: <T_0>(arg_0: (handlers: any, done: (result: T_0) => void) => void, arg_1: (handlers: any, done: (result: T_0) => void) => void, handlers: any, done: (result: T_0) => void) => void = (fn_0: (handlers: any, done: (result: T_0) => void) => void, orElse_1: (handlers: any, done: (result: T_0) => void) => void, handlers: any, done: (arg_0: T_0) => void) => {
  handleSimpleShallow2("319e9190", fn_0, [(handlers, _, __2) => {
    orElse_1(handlers, done);
  }], (handlers, x_2) => {
    done(handlers, x_2);
  }, handlers);
};

// handleFailPure.jd
const hash_038d5cba_0: (() ={hash_319e9190_0}> T_0, () ={}> T_0) ={}> T_0 = (
    fn_0: () ={hash_319e9190_0}> T_0,
    orElse_1: () ={}> T_0,
) => handle! fn_0 {0(() => __2) => orElse_1(), pure(x_2) => x_2}

// .ts
const hash_038d5cba: <T_0>(arg_0: (handlers: any, done: (result: T_0) => void) => void, arg_1: () => T_0) => T_0 = (fn_0, orElse_1) => {
  let handle_ret_0;
  handleSimpleShallow2("319e9190", fn_0, [(handlers, _, __2) => {
    handle_ret_0 = orElse_1();
  }], (handlers, x_2) => {
    handle_ret_0 = x_2;
  });
  return handle_ret_0;
};

// backtrack.jd
const hash_66e40a12_0: (() ={hash_4175b47c_0, hash_319e9190_0}> T_0) ={hash_319e9190_0}> T_0 = (
    fn_0: () ={hash_4175b47c_0, hash_319e9190_0}> T_0,
) => {
    handle! fn_0 {
        0(() => k_1) => {
            log("Backtrack decide please");
            <self>(() => hash_575fa754_0(() => k_1(true), () => k_1(false)));
        },
        pure(x_1) => x_1,
    };
}

// .ts
const hash_66e40a12: <T_0>(arg_0: (handlers: any, done: (result: T_0) => void) => void, handlers: any, done: (result: T_0) => void) => void = (fn_0: (handlers: any, done: (result: T_0) => void) => void, handlers: any, done: (arg_0: T_0) => void) => {
  handleSimpleShallow2("4175b47c", fn_0, [(handlers, _, k_1) => {
    ((handlers, _ignored) => {
      hash_66e40a12((handlers: any, done: (arg_0: T_0) => void) => {
        hash_575fa754((handlers: any, done: (arg_0: T_0) => void) => {
          k_1(true, handlers, done);
        }, (handlers: any, done: (arg_0: T_0) => void) => {
          k_1(false, handlers, done);
        }, handlers, done);
      }, handlers, done);
    })(handlers, log("Backtrack decide please"));
  }], (handlers, x_1) => {
    done(handlers, x_1);
  }, handlers);
};

// .jd
if isSquare(5) {
    log("NO");
} else {
    log("WHAT");
}

// .ts
(function () {
  if (isSquare(5)) {
    return log("NO");
  } else {
    return log("WHAT");
  }
})();

// .jd
hash_23de3332_0(
    hash_038d5cba_0(() => hash_66e40a12_0(() => hash_2fe6af82_0(4, 15)), () => "No solution found"),
) == "5:12"

// .ts
hash_23de3332(hash_038d5cba((handlers: any, done: (arg_0: string) => void) => {
  hash_66e40a12((handlers: any, done: (arg_0: string) => void) => {
    hash_2fe6af82(4, 15, handlers, done);
  }, handlers, done);
}, () => "No solution found")) == "5:12";
`;

exports[`Example files generics.jd 1`] = `
// identity.jd
const hash_7f06d7fc_0: (T_0) ={}> T_0 = (x_0: T_0) => x_0

// .ts
const hash_7f06d7fc: <T_0>(arg_0: T_0) => T_0 = x_0 => x_0;

// get2.jd
const hash_2ee1c280_0: int = hash_7f06d7fc_0(2)

// .ts
const hash_2ee1c280: number = hash_7f06d7fc(2);

// callme.jd
const hash_dfca9f30_0: ((T_0) ={}> T_0, T_0) ={}> T_0 = (x_0: (T_0) ={}> T_0, arg_1: T_0) => x_0(
    arg_1,
)

// .ts
const hash_dfca9f30: <T_0>(arg_0: (arg_0: T_0) => T_0, arg_1: T_0) => T_0 = (x_0, arg_1) => x_0(arg_1);

// addTwo.jd
const hash_e5dcc830_0: (int) ={}> int = (one_0: int) => one_0 + 2

// .ts
const hash_e5dcc830: (arg_0: number) => number = one_0 => one_0 + 2;

// callIt.jd
const hash_56ba3907_0: int = hash_dfca9f30_0(hash_e5dcc830_0, 5)

// .ts
const hash_56ba3907: number = hash_dfca9f30(hash_e5dcc830, 5);

// scopeIt.jd
const hash_7e08b4cb_0: (int) ={}> (int) ={}> int = (x_0: int) => (y_1: int) => x_0 + y_1

// .ts
const hash_7e08b4cb: (arg_0: number) => (arg_0: number) => number = x_0 => y_1 => x_0 + y_1;

// ten.jd
const hash_18812924_0: int = hash_7e08b4cb_0(4)(6)

// .ts
const hash_18812924: number = hash_7e08b4cb(4)(6);
`;

exports[`Example files ifs.jd 1`] = `
// x.jd
const hash_bfbc479c_0: int = if 10 > 2 {
    5;
} else {
    4;
}

// .ts
const hash_bfbc479c: number = function () {
  if (10 > 2) {
    return 5;
  } else {
    return 4;
  }
}();

// y.jd
const hash_92162e1c_0: (int) ={}> int = (h_0: int) => if h_0 < 10 {
    h_0 / 2;
} else {
    h_0 * 3;
}

// .ts
const hash_92162e1c: (arg_0: number) => number = h_0 => {
  if (h_0 < 10) {
    return h_0 / 2;
  } else {
    return h_0 * 3;
  }
};
`;

exports[`Example files inference.jd 1`] = `
// callOne.jd
const hash_76101238_0: ((int, string) ={}> T_0) ={}> T_0 = (f_0: (int, string) ={}> T_0) => f_0(
    2,
    "hi",
)

// .ts
const hash_76101238: <T_0>(arg_0: (arg_0: number, arg_1: string) => T_0) => T_0 = f_0 => f_0(2, "hi");

// inferrRecur.jd
const hash_0699af30_0: (int) ={}> int = (count_0: int) => <self>(count_0 + 4)

// .ts
const hash_0699af30: (arg_0: number) => number = count_0 => hash_0699af30(count_0 + 4);
`;

exports[`Example files lets.jd 1`] = `
// x.jd
const hash_176414dc_0: int = {
    const y_0 = 10;
    y_0;
}

// .ts
const hash_176414dc: number = function () {
  {
    const y_0 = 10;
    return y_0;
  }
}();

// z.jd
const hash_c49b4f30_0: (int) ={}> int = (n_0: int) => {
    const m_1 = n_0 + 2;
    m_1 - 1;
}

// .ts
const hash_c49b4f30: (arg_0: number) => number = n_0 => {
  const m_1 = n_0 + 2;
  return m_1 - 1;
};
`;

exports[`Type errors Expression 0 3 == "4" 1`] = `"Binops must have same-typed arguments"`;

exports[`Type errors Expression 2 hello(5) 1`] = `
"Wrong type for arg 0: 
Found: int
but expected string : {\\"start\\":{\\"offset\\":110,\\"line\\":7,\\"column\\":1},\\"end\\":{\\"offset\\":118,\\"line\\":7,\\"column\\":9}}"
`;

exports[`Type errors Expression 4 count(hello("m")) 1`] = `
"Wrong type for arg 0: 
Found: string
but expected int : {\\"start\\":{\\"offset\\":152,\\"line\\":11,\\"column\\":1},\\"end\\":{\\"offset\\":169,\\"line\\":11,\\"column\\":18}}"
`;

exports[`Type errors Expression 6 identity<int>("hello") 1`] = `
"Wrong type for arg 0: 
Found: string
but expected int : {\\"start\\":{\\"offset\\":243,\\"line\\":18,\\"column\\":1},\\"end\\":{\\"offset\\":265,\\"line\\":18,\\"column\\":23}}"
`;

exports[`Type errors Expression 7 count(identity<string>("hello")) 1`] = `
"Wrong type for arg 0: 
Found: string
but expected int : {\\"start\\":{\\"offset\\":286,\\"line\\":21,\\"column\\":1},\\"end\\":{\\"offset\\":318,\\"line\\":21,\\"column\\":33}}"
`;

exports[`Type errors Expression 8 <T,>(x: T): int => x 1`] = `"Explicit type variable T#0 can't unify with int"`;

exports[`Type errors Expression 9 <T,>(x: int): T => x 1`] = `"Unable to unify int with type variable T#0"`;

exports[`Type errors Expression 11 () ={}> raise!(GetString.get()) 1`] = `"Function is declared as pure, but is not. 1 effects found."`;

exports[`Type errors Expression 12 <T>(ok: T): string => hello(ok) 1`] = `"Explicit type variable T#0 can't unify with string"`;

exports[`Type errors Expression 13 (ok: string) => ok + 2 1`] = `"first arg to + wrong type"`;

exports[`Type errors Expression 14 () => {
    const x = "hello";
    x + 2
} 1`] = `"first arg to + wrong type"`;

exports[`Type errors Expression 15 (fn: (string) => string) => {
    const x = fn(4);
    x ++ "hi"
} 1`] = `
"Wrong type for arg 0: 
Found: int
but expected string : {\\"start\\":{\\"offset\\":649,\\"line\\":46,\\"column\\":15},\\"end\\":{\\"offset\\":654,\\"line\\":46,\\"column\\":20}}"
`;

exports[`Type errors Expression 16 (fn: () => string) => {
    const x: int = fn();
    x + 2
} 1`] = `"Value of const doesn't match type annotation. string, expected int"`;

exports[`Type errors Expression 17 (fn: () => string) => {
    const x = fn();
    x + 2
} 1`] = `"first arg to + wrong type"`;
